--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "node": "^18.17.1 || ^20.3.0 || >= 21.0.0"
   },
   "scripts": {
-    "dev": "astro dev",
+    "dev": "astro dev --site http://baidu.com",
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
