--- a/src/config.yaml
+++ b/src/config.yaml
@@ -3,7 +3,7 @@ site:
   site: 'https://go-iot-plat-load.pages.dev/'
   base: '/'
   trailingSlash: false
-  googleSiteVerificationId: ""
+  googleSiteVerificationId: "Fqv9hAyD2E_rk3WqbMs9ZZ26e5UbnYVx1IJl7yltcWM"
 
 # Default SEO metadata
 metadata:
@@ -11,6 +11,7 @@ metadata:
     default: 'Go IoT Platform'
     template: '%s — Go IoT Platform'
   description: "Go IoT Platform, a high-efficiency and scalable Internet of Things solution developed with the Go language. This platform focuses on providing stable and reliable MQTT client management, as well as comprehensive processing and analysis of MQTT reported data."
+  
   robots:
     index: true
     follow: true
